working revoke medcert inside inbox

--- a/src/app/pages/doctors-information/inbox/inbox.page.html
+++ b/src/app/pages/doctors-information/inbox/inbox.page.html
@@ -5,7 +5,7 @@
         <ion-row>
           <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
             <span class="padding-left-10" (click)="back()" routerDirection="backward" color="chh-css-primary2">
-              <ion-icon name="arrow-back-outline" class="my-icon vcenter"></ion-icon>
+              <ion-icon name="arrow-back-outline" class="my-icon vcenter pointer"></ion-icon>
             </span>
             <span class="padding-left-30 font-weight-500 fontSize-16"> &nbsp;&nbsp;Medical
               Certificate <span class="fontSize-14">({{modeSelected}}) </span>
