--- a/src/app/pages/doctors-information/sign-medcert/sign-medcert.page.html
+++ b/src/app/pages/doctors-information/sign-medcert/sign-medcert.page.html
@@ -1,5 +1,22 @@
 <ion-header mode="md" class="ion-no-border">
   <div>
+    <ion-toolbar [color]="isDesktop?'':'mango'">
+      <ion-grid class="ion-no-padding">
+        <ion-row>
+          <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
+            <span class="padding-left-10" (click)="back()" routerDirection="backward" color="chh-css-primary2">
+              <ion-icon name="arrow-back-outline" class="my-icon vcenter pointer"></ion-icon>
+            </span>
+            <span class="padding-left-30 font-weight-500 font-size-20"> &nbsp;&nbsp;Medical Certificate </span>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-toolbar>
+  </div>
+
+</ion-header>
+<!--ion-header mode="md" class="ion-no-border">
+  <div>
     <ion-toolbar color="mango">
       <span class="padding-left-10" (click)="back()" routerDirection="backward" color="chh-css-primary2">
         <ion-icon name="arrow-back-outline" class="my-icon vcenter"></ion-icon>
@@ -7,7 +24,7 @@
       <span class="padding-left-30 font-weight-500 font-size-20"> &nbsp;&nbsp;Medical Certificate </span>
     </ion-toolbar>
   </div>
-</ion-header>
+</ion-header-->
 <ion-content>
   <!--button (click)="generatePDF()">Generate PDF</button-->
   <ion-grid class="ion-no-padding">
