--- a/src/app/chh-web-components/chh-app-newsfeed/chh-app-newsfeed.component.html
+++ b/src/app/chh-web-components/chh-app-newsfeed/chh-app-newsfeed.component.html
@@ -16,23 +16,19 @@
   </ion-toolbar>
 </ion-header-->
 
-<ion-header mode="md" class="ion-no-border" >
+<ion-header mode="md" class="ion-no-border">
   <ion-toolbar color="mango">
-    <span 
-    class="padding-left-10 buttonActive"         
-    routerDirection="backwards"
-    color="chh-css-primary2"
-
-    (click)="closeModal()">
-    <!-- <ion-icon 
+    <span class="padding-left-10 buttonActive" routerDirection="backwards" color="chh-css-primary2"
+      (click)="closeModal()">
+      <!-- <ion-icon 
       name="chevron-back-outline" 
       class="my-icon vcenter">
     </ion-icon> -->
-    <ion-icon name="arrow-back-outline"  class="my-icon vcenter"></ion-icon>
-  </span>
+      <ion-icon name="arrow-back-outline" class="my-icon vcenter"></ion-icon>
+    </span>
 
 
-    <span  class="padding-left-30 font-weight-500 font-size-20"> &nbsp;&nbsp;News Feed </span>
+    <span class="padding-left-30 font-weight-500 font-size-20"> &nbsp;&nbsp;News Feed </span>
   </ion-toolbar>
   <!-- <ion-toolbar color="mango">
     <ion-title> Professional Fee </ion-title>
@@ -64,19 +60,23 @@
 <ion-content>
   <ion-grid class="ion-no-padding">
     <ion-row>
-      <ion-col >
+      <ion-col>
         <ion-card mode="ios">
-          <img *ngIf="data.imageUrl != ''" src="{{data.imageUrl}}" />
+          <pinch-zoom style="background-color: rgb(255, 255, 255);" *ngIf="data.imageUrl != ''">
+            <img src="{{data.imageUrl}}" />
+          </pinch-zoom>
           <ion-card-header>
             <ion-card-title class="ion-text-wrap">{{data.title}}</ion-card-title>
           </ion-card-header>
           <ion-card-content>
+            <pinch-zoom style="background-color: rgb(255, 255, 255);">
+              <p [innerHTML]="data.contentLongDesc"></p>
+            </pinch-zoom>
 
-            <p [innerHTML]="data.contentLongDesc"></p>
           </ion-card-content>
-          
+
         </ion-card>
       </ion-col>
-    </ion-row>        
+    </ion-row>
   </ion-grid>
 </ion-content>
