--- a/src/app/pages/doctors-information/inbox/inbox.page.html
+++ b/src/app/pages/doctors-information/inbox/inbox.page.html
@@ -81,9 +81,30 @@
   <ion-grid class="ion-no-padding">
     <ion-row>
       <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
+        <ion-button id="trigger-button">Click to open modal</ion-button>
+        <ion-modal trigger="trigger-button" [isOpen]="false" [breakpoints]="[ 0, 0.5]" [initialBreakpoint]="0.5">
+          <ng-template>
+            <ion-header>
+              <ion-toolbar color="mango">
+                <ion-buttons slot="start">
+                  <ion-button onclick="dismissModal()">Cancel</ion-button>
+                </ion-buttons>
+                <ion-title>Send for Revision</ion-title>
+                <ion-buttons slot="end">
+                  <ion-button onclick="dismissModal()">Save</ion-button>
+                </ion-buttons>
+              </ion-toolbar>
+            </ion-header>
+            <ion-content>
+              <ion-item style="height: 100%">
+                <ion-textarea rows="12" (keyup)="autoGrowTextZone($event)"></ion-textarea>
+              </ion-item>
+            </ion-content>
+          </ng-template>
+        </ion-modal>
         <ng-container>
 
-          <div *ngFor="let x of pendingApproval">
+          <div *ngFor=" let x of pendingApproval">
             <ion-card mode="ios">
 
               <ion-list>
