--- a/src/app/pages/doctors-information/inbox/inbox.page.html
+++ b/src/app/pages/doctors-information/inbox/inbox.page.html
@@ -81,8 +81,9 @@
   <ion-grid class="ion-no-padding">
     <ion-row>
       <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
-        <ion-button id="trigger-button">Click to open modal</ion-button>
-        <ion-modal trigger="trigger-button" [isOpen]="false" [breakpoints]="[ 0, 0.5]" [initialBreakpoint]="0.5">
+        <ion-button id="trigger-modal-forRevision" style="display:none">Click to open modal</ion-button>
+        <ion-modal trigger="trigger-modal-forRevision" [isOpen]="false" [breakpoints]="[ 0, 0.5]"
+          [initialBreakpoint]="0.5">
           <ng-template>
             <ion-header>
               <ion-toolbar color="mango">
@@ -170,13 +171,14 @@
                     <ion-button mode="ios" size="small" fill="outline" color="default" shape="" expand="block"
                       (click)="reviseRevokeApproval(x)" *ngIf="selected == 'FA'">
                       <span>Send for Revision</span>
-
                     </ion-button>
+                    <div>
+                      <ion-button mode="ios" size="small" fill="outline" color="danger" shape="" expand="block"
+                        (click)="reviseRevokeApproval(x)" *ngIf="selected == 'RA'">
+                        <span>Revoke</span>
+                      </ion-button>
 
-                    <ion-button mode="ios" size="small" fill="outline" color="danger" shape="" expand="block"
-                      (click)="reviseRevokeApproval(x)" *ngIf="selected == 'RA'">
-                      <span>Revoke</span>
-                    </ion-button>
+                    </div>
 
 
 
