--- a/src/app/pages/doctors-information/inbox/inbox.page.html
+++ b/src/app/pages/doctors-information/inbox/inbox.page.html
@@ -25,7 +25,7 @@
                     <ion-item (click)="changeMode('FR')" [ngClass]="{'boldMe': selected === 'FR'}" class="pointer">
                       <ion-label>&nbsp;For Revision</ion-label>
                     </ion-item>
-                    <ion-item (click)="changeMode('RA')" [ngClass]="{'boldMe': selected === 'RA'}" class="pointer">
+                    <ion-item (click)="changeMode('DA')" [ngClass]="{'boldMe': selected === 'DA'}" class="pointer">
                       <ion-label>&nbsp;Approved</ion-label>
                     </ion-item>
                   </ion-list>
@@ -161,10 +161,10 @@
               <ion-footer>
                 <ion-row>
                   <ion-col size="6">
-                    <ion-button mode="ios" size="small" color="mango" shape="" expand="block"
-                      (click)="viewCerticate(x)">
+                    <ion-button mode="ios" size="small" color="mango" shape="" expand="block" (click)="viewCerticate(x)"
+                      *ngIf="selected == 'FA' || selected == 'DA'">
                       <span *ngIf="selected == 'FA'">View & Sign</span>
-                      <span *ngIf="selected == 'RA'">View</span>
+                      <span *ngIf="selected == 'DA'">View</span>
                     </ion-button>
                   </ion-col>
                   <ion-col size="6">
