added comment before sending ajn approval to revision

--- a/src/app/pages/doctors-information/view-medcert1/view-medcert1.page.html
+++ b/src/app/pages/doctors-information/view-medcert1/view-medcert1.page.html
@@ -33,13 +33,13 @@
           </pinch-zoom>
 
           <ion-button id="trigger-button-certificate" style="display:none">Sign Document</ion-button>
-          <ion-row>
+          <!--ion-row>
             <ion-col>
               <ion-button mode="ios" size="small" color="warning" shape="" expand="block" *ngIf="isPDFLoading"
                 (click)="cancelApproval()">Revoke Approval</ion-button>
             </ion-col>
 
-          </ion-row>
+          </ion-row-->
         </ion-card>
       </ion-col>
     </ion-row>
