--- a/src/app/pages/doctors-information/inbox/inbox.page.html
+++ b/src/app/pages/doctors-information/inbox/inbox.page.html
@@ -18,7 +18,6 @@
                 <ion-content>
                   <ion-list>
                     <ion-list-header>Medical Certificate </ion-list-header>
-
                     <ion-item (click)="changeMode('FA')" [ngClass]="{'boldMe': selected === 'FA'}" class="pointer">
                       <ion-label>&nbsp;For Approval</ion-label>
                     </ion-item>
@@ -32,7 +31,6 @@
                 </ion-content>
               </ng-template>
             </ion-popover>
-
           </ion-col>
         </ion-row>
       </ion-grid>
@@ -54,7 +52,6 @@
               </ion-content>
             </ng-template>
           </ion-modal>
-
           <ion-item>
             <ion-label>View Record</ion-label>
             <ion-select [(ngModel)]="pastdays" value="{{pastdays}}" (ionChange)="viewRecordDays()" okText="Okay"
@@ -63,15 +60,14 @@
               <ion-select-option value="30">Past 30 days</ion-select-option>
               <ion-select-option value="45">Past 45 days</ion-select-option>
               <ion-select-option value="60">Past 60 days</ion-select-option>
+              <ion-select-option value="9999">Max</ion-select-option>
             </ion-select>
           </ion-item>
         </ion-col>
       </ion-row>
     </ion-grid>
   </div>
-
 </ion-header>
-
 <ion-content>
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" mode="ios">
     <ion-refresher-content pullingIcon="chevron-down-circle-outline" pullingText="Pull to refresh"
@@ -88,26 +84,24 @@
             <ion-header>
               <ion-toolbar color="mango">
                 <ion-buttons slot="start">
-                  <ion-button onclick="dismissModal()">Cancel</ion-button>
+                  <ion-button (click)="dismissForRevisionModal()">Cancel</ion-button>
                 </ion-buttons>
                 <ion-title>Send for Revision</ion-title>
                 <ion-buttons slot="end">
-                  <ion-button onclick="dismissModal()">Save</ion-button>
+                  <ion-button (click)="saveForRevisionModal()">Save</ion-button>
                 </ion-buttons>
               </ion-toolbar>
             </ion-header>
             <ion-content>
               <ion-item style="height: 100%">
-                <ion-textarea rows="12" (keyup)="autoGrowTextZone($event)"></ion-textarea>
+                <ion-textarea rows="12" (keyup)="autoGrowTextZone($event)" [(ngModel)]="forRevisionText"></ion-textarea>
               </ion-item>
             </ion-content>
           </ng-template>
         </ion-modal>
         <ng-container>
-
           <div *ngFor=" let x of pendingApproval">
             <ion-card mode="ios">
-
               <ion-list>
                 <ion-item style="padding-bottom: 10px">
                   <div class="ion-text-wrap">
@@ -121,7 +115,6 @@
                       </h2>
                     </ion-label>
                   </div>
-
                 </ion-item>
                 <ion-item lines="none" style="padding-bottom: 10px;font-size: 12px;">
                   <div class="ion-text-wrap" style="padding-top: 5px">
@@ -141,10 +134,7 @@
                       <ion-icon name="calendar-outline" slot="start"></ion-icon>
                       <span style="font-size: 13px;"> Admission Date &nbsp;&nbsp;: {{ x.dateAdmitted }}</span>
                     </div>
-
-
                   </div>
-
                 </ion-item>
                 <ion-item>
                   <div class="ion-text-wrap">
@@ -152,11 +142,21 @@
                   </div>
                 </ion-item>
                 <ion-item>
-
                   <ion-text [innerHTML]="x.final_diagnosis" class="ion-text-wrap custom-font" style="font-size: 14px;">
                   </ion-text>
                 </ion-item>
-
+                <div *ngIf="x.revision_dx_remarks != null">
+                  <ion-item>
+                    <div class="ion-text-wrap">
+                      <ion-text>Note</ion-text>
+                    </div>
+                  </ion-item>
+                  <ion-item>
+                    <ion-text [innerHTML]="x.revision_dx_remarks" class="ion-text-wrap custom-font"
+                      style="font-size: 14px;">
+                    </ion-text>
+                  </ion-item>
+                </div>
               </ion-list>
               <ion-footer>
                 <ion-row>
@@ -177,11 +177,7 @@
                         (click)="reviseRevokeApproval(x)" *ngIf="selected == 'RA'">
                         <span>Revoke</span>
                       </ion-button>
-
                     </div>
-
-
-
                   </ion-col>
                 </ion-row>
               </ion-footer>
