--- a/src/app/tab-appointments/tab-appointments.page.html
+++ b/src/app/tab-appointments/tab-appointments.page.html
@@ -9,24 +9,11 @@
   <ion-grid class="ion-no-padding chh-darkmode">
     <ion-row>
       <!--ion-col size-md="6" offset-md="3" size-sm="6"  -->
-      <ion-col
-        size-md="8"
-        offset-md="2"
-        size-lg="6"
-        offset-lg="3"
-        class="custom-border-bottom chh-darkmode"
-      >
-        <chh-app-hospital
-          (hospital)="locationAction($event)"
-          [readonlyComp]="buttonDisablerHospSelector"
-          [Activator]="hospitalActivator"
-        ></chh-app-hospital>
-        <chh-app-date-selector
-          [passedDate]="selectedDate"
-          [header-data]="headerData"
-          (dateSelector)="dateChanged($event)"
-          [readonlyComp]="buttonDisablerDateSelector"
-        ></chh-app-date-selector>
+      <ion-col size-md="8" offset-md="2" size-lg="6" offset-lg="3" class="custom-border-bottom chh-darkmode">
+        <chh-app-hospital (hospital)="locationAction($event)" [readonlyComp]="buttonDisablerHospSelector"
+          [Activator]="hospitalActivator"></chh-app-hospital>
+        <chh-app-date-selector [passedDate]="selectedDate" [header-data]="headerData"
+          (dateSelector)="dateChanged($event)" [readonlyComp]="buttonDisablerDateSelector"></chh-app-date-selector>
       </ion-col>
     </ion-row>
   </ion-grid>
@@ -35,11 +22,7 @@
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" mode="ios" *ngIf="isDesktop">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed" color="mangolight">
-    <ion-fab-button (click)="showaddmodal()" color="mangolight">
-      <ion-icon name="add"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
+
   <div class="spin" [hidden]="ishidden">
     <ion-spinner class="spinner-class"></ion-spinner>
   </div>
@@ -47,71 +30,44 @@
     <ion-row>
       <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
         <!-- <ng-container> -->
-          <div *ngFor="let x of jsonObj5">
-            <div *ngFor="let y of x.data">
-              <ion-card
-                (click)="presentActionSheet(y.appt_id,y.status,y.patientName)"
-                mode="ios"
-                class="pointer"
-              >
-                <ion-item lines="none">
-                  <ion-avatar slot="start">
-                    <chh-app-text-avatar
-                      [text]="y.patientName"
-                      [color]=""
-                    ></chh-app-text-avatar>
-                  </ion-avatar>
-                  <ion-label style="margin-top: -5px;">
-                    <ion-item class="ion-no-padding">
-                      <h2 class="ion-text-wrap" style="padding-top: 20px;">
-                        {{y.patientName}}
-                      </h2>
-                    </ion-item>
-                    <ion-row class="ion-no-padding" lines="none">
-                      <!-- Default Progressbar with 50 percent -->
+        <div *ngFor="let x of jsonObj5">
+          <div *ngFor="let y of x.data">
+            <ion-card (click)="presentActionSheet(y.appt_id,y.status,y.patientName)" mode="ios" class="pointer">
+              <ion-item lines="none">
+                <ion-avatar slot="start">
+                  <chh-app-text-avatar [text]="y.patientName" [color]=""></chh-app-text-avatar>
+                </ion-avatar>
+                <ion-label style="margin-top: -5px;">
+                  <ion-item class="ion-no-padding">
+                    <h2 class="ion-text-wrap" style="padding-top: 20px;">
+                      {{y.patientName}}
+                    </h2>
+                  </ion-item>
+                  <ion-row class="ion-no-padding" lines="none">
+                    <!-- Default Progressbar with 50 percent -->
 
-                      <div>
-                        <p>
-                          <ion-icon
-                            name="time-outline"
-                            slot="start"
-                            style="padding-top: 5px !important;"
-                          ></ion-icon>
-                          {{y.time}}
-                        </p>
-                        <ion-badge
-                          color="success"
-                          slot="end"
-                          *ngIf="y.status == this.constants.APPOINTMENT_STATUS__VALUE__COMPLETE"
-                          >Completed</ion-badge
-                        >
-                        <ion-badge
-                          color="primary"
-                          *ngIf="y.status == this.constants.APPOINTMENT_STATUS__VALUE__WAITING"
-                          slot="end"
-                          >{{y.status}}</ion-badge
-                        >
-                        <ion-badge
-                          color="secondary"
-                          *ngIf="y.status == this.constants.APPOINTMENT_STATUS__VALUE__SERVING"
-                          slot="end"
-                          >{{y.status}}</ion-badge
-                        >
-                        <ion-badge
-                          color="warning"
-                          *ngIf="y.status == this.constants.APPOINTMENT_STATUS__VALUE__RESERVED"
-                          slot="end"
-                          >{{y.status}}</ion-badge
-                        >
-                      </div>
+                    <div>
+                      <p>
+                        <ion-icon name="time-outline" slot="start" style="padding-top: 5px !important;"></ion-icon>
+                        {{y.time}}
+                      </p>
+                      <ion-badge color="success" slot="end"
+                        *ngIf="y.status == this.constants.APPOINTMENT_STATUS__VALUE__COMPLETE">Completed</ion-badge>
+                      <ion-badge color="primary" *ngIf="y.status == this.constants.APPOINTMENT_STATUS__VALUE__WAITING"
+                        slot="end">{{y.status}}</ion-badge>
+                      <ion-badge color="secondary" *ngIf="y.status == this.constants.APPOINTMENT_STATUS__VALUE__SERVING"
+                        slot="end">{{y.status}}</ion-badge>
+                      <ion-badge color="warning" *ngIf="y.status == this.constants.APPOINTMENT_STATUS__VALUE__RESERVED"
+                        slot="end">{{y.status}}</ion-badge>
+                    </div>
 
-                      <br />
-                    </ion-row>
-                  </ion-label>
-                </ion-item>
-              </ion-card>
-            </div>
+                    <br />
+                  </ion-row>
+                </ion-label>
+              </ion-item>
+            </ion-card>
           </div>
+        </div>
         <!-- </ng-container> -->
 
         <!-- Skeleton  -->
@@ -285,22 +241,19 @@
           </div>
         </ng-template> -->
 
-        <div *ngIf="!objecthandler" >
+        <div *ngIf="!objecthandler">
           <!-- <img src="assets/img/3973477-no-data-concept-illustration-custom.png">
           <div class="ion-text-center">
             <h3> {{this.messages.NO_DATA_AVAILABLE}}</h3>
           </div> -->
 
 
-          <ion-grid >
+          <ion-grid>
             <ion-row>
               <ion-col size="8" offset="2">
                 <div class="vertical-center">
                   <div class="center">
-                    <img
-                      src="assets/img/no-data-rafiki.png"
-                    
-                    />
+                    <img src="assets/img/no-data-rafiki.png" />
                   </div>
                 </div>
               </ion-col>
