fixed bug on send for revision, added toast after sending for revision and approving

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,12 +6,8 @@
             </ion-toolbar>a
         </ion-header-->
         <ion-content>
-            <div color="mango" class="menu-header-bg" style="background: #275228">
+            <div color="mango" class="menu-header-bg" style="background: #275228" *ngIf="lastName!=null">
                 <ion-item lines="none" color="mango" class='menu-header-bg'>
-
-
-
-
                     <ion-avatar slot="start">
                         <chh-app-text-avatar [text]="lastName" [color]=""></chh-app-text-avatar>
                     </ion-avatar>
