--- a/src/app/pages/doctors-information/inbox/inbox.page.html
+++ b/src/app/pages/doctors-information/inbox/inbox.page.html
@@ -38,7 +38,7 @@
     <ion-grid class="ion-no-padding">
       <ion-row>
         <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
-          <ion-item button="true" id="open-modal" *ngIf="!isDesktop" (click)="activateIsCalendarModal()">
+          <!--ion-item button="true" id="open-modal" *ngIf="!isDesktop" (click)="activateIsCalendarModal()">
             <ion-icon icon="calendar-outline" slot="start" color="mango"></ion-icon>
             <ion-label>From : {{ dateToday }}</ion-label>
             <ion-text slot="end">To :{{ dateNow }}</ion-text>
@@ -51,7 +51,7 @@
                 </ion-datetime>
               </ion-content>
             </ng-template>
-          </ion-modal>
+          </ion-modal-->
           <ion-item>
             <ion-label>View Record</ion-label>
             <ion-select [(ngModel)]="pastdays" value="{{pastdays}}" (ionChange)="viewRecordDays()" okText="Okay"
@@ -100,31 +100,31 @@
           </ng-template>
         </ion-modal>
         <ng-container>
-          <div *ngFor=" let x of pendingApproval">
+          <div *ngFor="let x of pendingApproval">
             <ion-card mode="ios">
               <ion-list>
-                <ion-item style="padding-bottom: 10px;" class="item-background-color">
-                  <div class="ion-text-wrap">
+                <ion-item class="item-background-color paddingBottom10" lines="none">
+                  <div class="ion-text-wrap paddingBottom5">
                     <ion-label>
-                      <h2 class="ion-text-wrap" style="padding-top: 10px;">
+                      <h2 class="ion-text-wrap paddingTop10">
                         <b>{{ x.patient_name }}</b>
                         <ion-text color="primary">
                           <p color="primary"><b>{{x.bdayConverted}} <strong>|</strong> {{x.age}} <strong>|</strong>
                               {{x.gender}}</b>&nbsp;
-                            <ion-badge color="danger" mode="ios" *ngIf="x.rework_dx_flg == 'W'">Reworked</ion-badge>
-                            <ion-badge color="warning" mode="ios" *ngIf="x.rework_dx_flg == 'V'">Revised</ion-badge>
-                            &nbsp;<ion-badge color="success" mode="ios"
+                            <ion-badge class="icon" color="danger" mode="ios" *ngIf="x.rework_dx_flg == 'W'">Reworked
+                            </ion-badge>
+                            <ion-badge class="icon" color="warning" mode="ios" *ngIf="x.rework_dx_flg == 'V'">Revised
+                            </ion-badge>
+                            <ion-badge class="icon" color="success" mode="ios"
                               *ngIf="x.approval_status == 'FA' || x.approval_status == 'RA' ">For Approval
                             </ion-badge>
-
-                            &nbsp;<ion-badge color="success" mode="ios" *ngIf="x.approval_status == 'FR' ">For
+                            <ion-badge class="icon" color="success" mode="ios" *ngIf="x.approval_status == 'FR' ">For
                               Revision
                             </ion-badge>
-
-                            &nbsp;<ion-badge color="success" mode="ios" *ngIf="x.approval_status == 'DA' ">Approved
+                            <ion-badge class="icon" color="success" mode="ios" *ngIf="x.approval_status == 'DA' ">
+                              Approved
                             </ion-badge>
                           </p>
-
                         </ion-text>
                       </h2>
                     </ion-label>
@@ -150,60 +150,72 @@
                     </div>
                   </div>
                 </ion-item>
-                <ion-item>
-                  <div class="ion-text-wrap">
-                    <ion-text>Final Diagnosis</ion-text>
-                  </div>
-                </ion-item>
-                <ion-item>
-                  <ion-text [innerHTML]="x.final_diagnosis" class="ion-text-wrap custom-font" style="font-size: 14px;">
-                  </ion-text>
-                </ion-item>
-                <div *ngIf="x.revision_dx_remarks != null">
-                  <ion-item>
-                    <div class="ion-text-wrap">
-                      <ion-text>Revision Note</ion-text>
-                    </div>
+                <ion-list>
+                  <ion-item-divider class="item-divider-color">
+                    <ion-label>
+                      Final Diagnosis
+                    </ion-label>
+                  </ion-item-divider>
+                  <ion-item lines="none">
+                    <ion-text [innerHTML]="x.final_diagnosis" class="ion-text-wrap custom-font"
+                      style="font-size: 14px;">
+                    </ion-text>
                   </ion-item>
-                  <ion-item>
+                </ion-list>
+                <ion-list *ngIf="x.revision_dx_remarks != null">
+                  <ion-item-divider>
+                    <ion-label>
+                      Revision Note
+                    </ion-label>
+                  </ion-item-divider>
+                  <ion-item lines="none">
                     <ion-text [innerHTML]="x.revision_dx_remarks" class="ion-text-wrap custom-font"
                       style="font-size: 14px;">
                     </ion-text>
                   </ion-item>
-                </div>
-              </ion-list>
-              <ion-footer>
+                </ion-list>
 
+              </ion-list>
+              <ion-footer *ngIf="selected != 'FR'">
                 <ion-row *ngIf="selected == 'DA'">
                   <ion-col size="12">
                     <ion-button mode="ios" size="small" color="mango" shape="" expand="block"
                       (click)="viewCerticate(x)">
-                      <span>View</span>
+                      <span>View Approved Medical Certificate</span>
                     </ion-button>
+                    <!--div class="center">
+                      <ion-item lines="none">
+                        <ion-text (click)="viewCerticate(x)">
+                          <b>View</b>
+                        </ion-text>
+                      </ion-item>
+                    </div-->
                   </ion-col>
                 </ion-row>
-
-
-                <ion-row>
-                  <ion-col size="6">
-                    <ion-button mode="ios" size="small" color="mango" shape="" expand="block" (click)="viewCerticate(x)"
-                      *ngIf="selected == 'FA'">
-                      <span>View & Sign</span>
-                    </ion-button>
-                  </ion-col>
-                  <ion-col size="6">
-                    <ion-button mode="ios" size="small" fill="outline" color="default" shape="" expand="block"
-                      (click)="reviseRevokeApproval(x)" *ngIf="selected == 'FA'">
-                      <span>Send for Revision</span>
-                    </ion-button>
-                    <div>
-                      <ion-button mode="ios" size="small" fill="outline" color="danger" shape="" expand="block"
-                        (click)="reviseRevokeApproval(x)" *ngIf="selected == 'RA'">
-                        <span>Revoke</span>
-                      </ion-button>
-                    </div>
-                  </ion-col>
-                </ion-row>
+                <ion-item lines="none" *ngIf="selected != 'DA'">
+                  <ion-grid>
+                    <ion-row>
+                      <ion-col size="6">
+                        <ion-button mode="ios" size="small" color="mango" shape="" expand="block"
+                          (click)="viewCerticate(x)" *ngIf="selected == 'FA'">
+                          <span>View & Sign</span>
+                        </ion-button>
+                      </ion-col>
+                      <ion-col size="6">
+                        <ion-button mode="ios" size="small" fill="outline" color="default" shape="" expand="block"
+                          (click)="reviseRevokeApproval(x)" *ngIf="selected == 'FA'">
+                          <span>Send for Revision</span>
+                        </ion-button>
+                        <div>
+                          <ion-button mode="ios" size="small" fill="outline" color="danger" shape="" expand="block"
+                            (click)="reviseRevokeApproval(x)" *ngIf="selected == 'RA'">
+                            <span>Revoke</span>
+                          </ion-button>
+                        </div>
+                      </ion-col>
+                    </ion-row>
+                  </ion-grid>
+                </ion-item>
               </ion-footer>
             </ion-card>
           </div>
