--- a/src/app/pages/doctors-information/sign-medcert/sign-medcert.page.html
+++ b/src/app/pages/doctors-information/sign-medcert/sign-medcert.page.html
@@ -49,22 +49,28 @@
             </pdf-viewer>
           </pinch-zoom>
 
-          <ion-button id="trigger-button-certificate" style="display:none">Sign Document</ion-button>
-          <ion-row>
-            <ion-col size="6">
-              <ion-button (click)="openConsent()" mode="ios" size="small" color="mango" shape="" expand="block">Sign and
-                Approve
-              </ion-button>
-            </ion-col>
-            <ion-col size="6">
-              <ion-button mode="ios" size="small" fill="outline" color="default" shape="" expand="block"
-                (click)="reviseRevokeApproval()">
-                <span>Send for Revision</span>
-              </ion-button>
-            </ion-col>
-          </ion-row>
-          <ion-button id="trigger-button-consent" style="display:none">trigger-button-consent</ion-button>
-          <ion-modal trigger="trigger-button-consent">
+          <ion-button id="trigger-button-certificate-signmedcert" style="display:none">Sign Document</ion-button>
+          <ion-item>
+            <ion-grid>
+              <ion-row>
+                <ion-col size="6">
+                  <ion-button (click)="openConsent()" mode="ios" size="small" color="mango" shape="" expand="block">Sign
+                    and
+                    Approve
+                  </ion-button>
+                </ion-col>
+                <ion-col size="6" *ngIf="!isUploaded">
+                  <ion-button mode="ios" size="small" fill="outline" color="default" shape="" expand="block"
+                    (click)="reviseRevokeApproval()">
+                    <span>Send for Revision</span>
+                  </ion-button>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-item>
+          <ion-button id="trigger-button-consent-signmedcert" style="display:none">trigger-button-consent-signmedcert
+          </ion-button>
+          <ion-modal trigger="trigger-button-consent-signmedcert">
             <ng-template>
               <ion-header mode="md" class="ion-no-border">
                 <ion-toolbar class="in-toolbar ios toolbar-title-default hydrated" color="mango">
@@ -211,7 +217,7 @@
   </ion-grid>
 
 
-  <ion-modal trigger="trigger-button-certificate" show-backdrop="true" class="ion5modalSign">
+  <ion-modal trigger="trigger-button-certificate-signmedcert" show-backdrop="true" class="ion5modalSign">
 
     <ng-template>
       <ion-content class="blur testssss">
