--- a/src/app/pages/doctors-information/view-medcert1/view-medcert1.page.html
+++ b/src/app/pages/doctors-information/view-medcert1/view-medcert1.page.html
@@ -46,21 +46,18 @@
   </ion-grid>
 
 
-  <ion-modal trigger="trigger-button-certificate" show-backdrop="true" class="ion6modaltest">
+  <!--ion-modal trigger="trigger-button-certificate" show-backdrop="true" class="ion6modaltest">
 
     <ng-template>
       <ion-content class="blur testssss">
         <div class="  customBackground">
           <div class="  customBackgroundColor" style="padding:10px">
-            <!--ion-icon style="float:right" size="large" name="close-outline" (click)="closeModal()"></ion-icon-->
-
             <div class="signature-container  ">
               <div class=" bdrSolid1pxBlack" style="background-color: white;">
                 <signature-pad [options]="signaturePadOptions" (onBeginEvent)="drawStart()"
                   (onEndEvent)="drawComplete()">
                 </signature-pad>
               </div>
-
             </div>
             <ion-grid class="noPaddingTop noPaddingBottom">
               <ion-row class="noPaddingTop noPaddingBottom">
@@ -78,22 +75,10 @@
                 </ion-col>
               </ion-row>
             </ion-grid>
-            <!--ion-grid>
-              <ion-row>
-                <ion-col size="4">
-                  <ion-button color="danger" (click)="clearPad()">Clear</ion-button>
-                </ion-col>
-                <ion-col size="5"></ion-col>
-                <ion-col size="3">
-                  <ion-button color="secondary" (click)="savePad()">Save</ion-button>
-                </ion-col>
-              </ion-row>
-            </ion-grid-->
-
           </div>
         </div>
       </ion-content>
     </ng-template>
 
-  </ion-modal>
+  </ion-modal-->
 </ion-content>
