--- a/src/global.scss
+++ b/src/global.scss
@@ -659,6 +659,20 @@ ion-modal.ion6modalviewsignature {
 .noPaddingBottom{
   padding-bottom:0px !important;
 }
+.paddingBottom5{
+  padding-bottom: 5px !important;
+}
+.paddingBottom10 {
+  padding-bottom: 10 !important;
+}
+.paddingTop5{
+    padding-top: 5px !important;
+}
+
+.paddingTop10 {
+  padding-top: 10px !important;
+}
+
 
 .floatRight{
   float:right !important;
