added darkmode on pending approval

--- a/src/app/pages/doctors-information/inbox/inbox.page.html
+++ b/src/app/pages/doctors-information/inbox/inbox.page.html
@@ -167,7 +167,7 @@
                   </ion-item>
                 </ion-list>
                 <ion-list *ngIf="x.revision_dx_remarks != null">
-                  <ion-item-divider>
+                  <ion-item-divider class="item-divider-color">
                     <ion-label>
                       Revision Note
                     </ion-label>
