added white background on show signature

--- a/src/app/pages/doctors-information/sign-medcert/sign-medcert.page.html
+++ b/src/app/pages/doctors-information/sign-medcert/sign-medcert.page.html
@@ -179,8 +179,9 @@
               <ion-content>
 
                 <ion-item lines="none">
-
-                  <img src="{{signatureBase64Full}}" />
+                  <div class="whiteBg">
+                    <img src="{{signatureBase64Full}}" />
+                  </div>
                 </ion-item>
                 <ion-item lines="none">
                   <ion-text>
