edited UI on inbox

--- a/src/app/pages/doctors-information/inbox/inbox.page.html
+++ b/src/app/pages/doctors-information/inbox/inbox.page.html
@@ -185,7 +185,7 @@
               <ion-footer *ngIf="selected != 'FR'">
                 <ion-row *ngIf="selected == 'DA'">
                   <ion-col size="12">
-                    <ion-button mode="ios" size="small" color="mango" shape="" expand="block"
+                    <ion-button mode="ios" size="small" fill="outline" color="mango" shape="" expand="block"
                       (click)="viewCerticate(x)">
                       <span>View Approved Medical Certificate</span>
                     </ion-button>
