--- a/src/global.scss
+++ b/src/global.scss
@@ -683,7 +683,7 @@ ion-modal.ion6modalviewsignature {
 
 
 .item-background-color {
-  --ion-item-background: #e6e6e6 !important;
+  --ion-item-background: #bebebe !important;
 }
 
 .item-divider-color {
