--- a/src/app/tab-in-patients/tab-in-patients.page.html
+++ b/src/app/tab-in-patients/tab-in-patients.page.html
@@ -82,7 +82,7 @@
                             </h2>
 
                             <ion-badge color="warning" slot="end"
-                              *ngIf="x.admission_status == this.constants.ADMISSION_STATUS__CODE__FOR_DISCHARGE && x.doctor_prof_fee == this.constants.ANY__VALUE__NULL && x.is_posted == this.constants.ANY__VALUE__NULL">
+                              *ngIf="x.admission_status == this.constants.ADMISSION_STATUS__CODE__FOR_DISCHARGE && (x.doctor_prof_fee == null || x.doctor_prof_fee == '0') && x.is_posted == this.constants.ANY__VALUE__NULL">
                               {{this.constants.DOCTOR__CODE__PROFESSIONAL_FEE}}</ion-badge>
                             <ion-badge color="success" slot="end"
                               *ngIf="x.doctor_prof_fee != this.constants.ANY__VALUE__NULL && x.is_posted !=this.constants.ANY__VALUE__NULL">
