working view progress notes

--- a/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
+++ b/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
@@ -75,6 +75,8 @@ ___  ___        _      _  _
     [admittingDiagnosis2]="admittingDiagnosis2" [truncating1]="truncating1">
   </app-chh-app-admitting-diagnosis>
 
+
+  <resi-progress-notes></resi-progress-notes>
   <!-- progress notes -->
   <!--ion-card mode="ios" *ngIf="progNot_account_no != ''">
     <ion-list>
