--- a/src/app/chh-web-components/progressnotes-history-card/progressnotes-history-card.component.html
+++ b/src/app/chh-web-components/progressnotes-history-card/progressnotes-history-card.component.html
@@ -1,7 +1,8 @@
 <ion-card class="pointer customcardcss" id="asdasd{{counter}}" [ngClass]="getType()">
   <ion-item>
     <ion-avatar>
-      <img src="https://doki.chonghua.com.ph/assets/profile/{{user_created}}.png">
+      <ion-icon name="person-outline"></ion-icon>
+      <!--img src="https://doki.chonghua.com.ph/assets/profile/{{user_created}}.png"-->
     </ion-avatar>
     <ion-label>
       <h3>{{user_created}}</h3>
