--- a/src/app/pages/in-patient-patient-information/progress-notes-per-day/progress-notes-per-day.page.html
+++ b/src/app/pages/in-patient-patient-information/progress-notes-per-day/progress-notes-per-day.page.html
@@ -67,7 +67,7 @@
                         (click)="presentPopover($event,x)" *ngIf="x.is_approve == '0'"><b>Comments</b>
                       </ion-button-->
                       <ion-button color="mango" fill="clear" class="pointer icon-center  floatRight testletter"
-                        (click)="openModal(x)" *ngIf="x.is_approve == '0'"><b>View Comments</b>
+                        (click)="openModal(x)"><b>View Comments</b>
                       </ion-button>
 
 
