working chat and notif

--- a/src/app/chh-web-components/progressnotes-history-card/progressnotes-history-card.component.html
+++ b/src/app/chh-web-components/progressnotes-history-card/progressnotes-history-card.component.html
@@ -5,7 +5,7 @@
       <!--img src="https://doki.chonghua.com.ph/assets/profile/{{user_created}}.png"-->
     </ion-avatar>
     <ion-label>
-      <h3>{{user_created}}</h3>
+      <h3>Dr. {{user_created}}</h3>
       <p>{{dateCreateConverted}} {{dateCreateTimeConverted}}</p>
     </ion-label>
   </ion-item>
