--- a/src/app/chh-web-components/progressnotes-history/progressnotes-history.component.html
+++ b/src/app/chh-web-components/progressnotes-history/progressnotes-history.component.html
@@ -29,7 +29,7 @@
             <div *ngFor="let x of progessNotes" class="groupList">
               <history-card [dateCreateConverted]="x.dateCreateConverted"
                 [dateCreateTimeConverted]="x.dateCreateTimeConverted" [notes]="x.notes" [noteslength]="x.noteslength"
-                [notesmall]="x.notessmall" [counter]="x.counter" [user_created]="x.user_created" [type]="x.type"
+                [notesmall]="x.notessmall" [counter]="x.counter" [user_created]="x.username" [type]="x.type"
                 [scroller]="scroller">
               </history-card>
             </div>
